# ExcelDiff

./: .gitignore  ARCHITECTURE.md  pyproject.toml
docs/: PROCESS_MAPS.md
src/exceldiff/: __init__.py  cli.py
src/exceldiff/comparison/: cell_comparator.py  engine.py  models.py  sheet_comparator.py  workbook_comparator.py
src/exceldiff/parsing/: cell_parser.py  models.py  sheet_parser.py  workbook_parser.py
src/exceldiff/renderers/: excel.py  html.py  terminal.py
src/exceldiff/renderers/templates/: report.html  style.css
src/exceldiff/web/: app.py  routes.py
src/exceldiff/web/templates/: base.html  results.html  sheet_detail.html  upload.html
tests/: conftest.py
tests/test_comparison/: test_engine.py
tests/test_parsing/: test_workbook_parser.py
tests/test_renderers/: test_excel.py  test_html.py
tests/test_web/: test_routes.py
