[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "exceldiff"
version = "0.1.0"
description = "Compare Excel workbook structure and formulae"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "openpyxl>=3.1.0",
    "click>=8.0",
    "rich>=13.0",
]

[project.optional-dependencies]
html = ["jinja2>=3.1"]
web = ["flask>=3.0", "jinja2>=3.1"]
all = ["jinja2>=3.1", "flask>=3.0"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
]

[project.scripts]
exceldiff = "exceldiff.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py310"
line-length = 120
